# BINGER

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pxi.sh  scp.sh
Lab/: go.sh
Lab/LSM/: 6.C  a.root  sys.C
Lab/g4/ETF_git/ETFbk_20180201/: CMakeLists.txt  ETF.cc  gui.mac  run2.mac  vis.mac
Lab/g4/ETF_git/ETFbk_20180201/include/: ETFDetectorConstruction.hh  ETFMagneticField.hh  ETFPrimaryGeneratorAction.hh  ETFRunAction.hh
Lab/g4/ETF_git/ETFbk_20180201/src/: ETFDetectorConstruction.cc  ETFDriftChamberHit.cc  ETFEventAction.cc  ETFMagneticField.cc  ETFPrimaryGeneratorAction.cc
Lab/gui/: MyMainFrame.C  MyMainFrame.h  MyMainFrameDict.C  MyMainFrameDict_rdict.pcm  gui  gui.C  makefile
Lab/gui1/: CMakeLists.txt  MyMainFrame.C  MyMainFrame.h  MyMainFrameDict.C  MyMainFrameDict_rdict.pcm  gui  makefile  test.C
Lab/mille/: millepede.C
Lab/online_pxi_OPF/: Makefile  Makefile~  Online.cpp  Online.cpp~  Online.h  Online.h~  OnlineFrame.cpp  OnlineFrame.cpp~  OnlineFrame.h  Ronline.root  TH_analyze.cpp  TH_analyze.cpp~  TH_define.h  TH_fill.cpp  TH_fill.cpp~  TH_init.cpp  TH_init.cpp~  can_daq.root  define_process_one_channel_convert.cpp~  define_process_one_channel_convert_ppac.c~  define_process_one_channel_convert_ppac_in_magnet.cpp  define_process_one_channel_convert_ppac_mapeng.cpp~  define_process_one_channel_convert_qqac.cpp  define_process_one_channel_convert_qqac.c~  gdaq_data_save.c  gdaq_include.h  gdaq_include.h~  gdaq_include1.h  gdaq_include1.h~  online  process_one_channel.cpp  process_one_channel.cpp~
Lab/rec/: position0.C
Lab/theory/: CMakeLists.txt
Lab/theory/eikonal/: CMakeLists.txt
Lab/theory/eikonal/inc/: TACS.h
Lab/theory/eikonal/src/: TACS.C
Lab/theory/src/: CMakeLists.txt  test.C
anaG4SimBuild/: CMakeCache.txt  ETFvac.root  Makefile  a.b  anaG4Sim  cmake_install.cmake  tmp.C
anaG4SimBuild/etf/: Makefile  cmake_install.cmake
anaG4SimBuild/src/: Makefile  cmake_install.cmake
build1/: CMakeCache.txt  Makefile  a.sh  b.sh  c.sh  cmake_install.cmake  goC12.sh  goC14.sh  goC16.sh  goO18.sh  invalidHit.C  pre  softEff.C
build1/WithTA_2020_0314/: B15.C  C16Ori.C  cutA0.C  tmp.C  yield.C
build1/etf/: Makefile
build1/src/: Makefile
buildgamma/: go.sh  goJim.sh  goZ.sh  showVME.C  tmp.C
config/: readme.md
config/MagnetMap/: magnetic.txt
config/OpticFiber/: readme.md
config/STR/: STR_aaa900.root  STR_spline.root  STR_spline_old.root  STR_stiff.root  fit.C  readme.txt
config/beamTest_2016Nov/: readme.md
config/pion_2017Oct/: readme.md
config/quadrupleDC_P_Ma_Test/: readme.md
config/tripletDC_P_Ma_Test/: readme.md
data/example/: 20180713_example.006
doc/: Doxyfile
doc/html/: TAAnodeData_8C.html  TAAnodeData_8C__incl.map  TAAnodeData_8C__incl.md5  TAAnodeData_8h__dep__incl.md5  TAAnodeData_8h__incl.map  TAAnodePara_8C__incl.md5  TAAnodePara_8h.html  TAAnodePara_8h__dep__incl.map  TAAnodePara_8h__incl.map  TAAnodePara_8h_source.html  TAAnode_8C__incl.md5  TAAnode_8h__incl.map  TAAnode_8h__incl.md5  TAAssessPDC_8C.html  TAAssessPDC_8C__incl.map  TAAssessPDC_8h.html  TAAssessPDC_8h__dep__incl.md5  TAAssessPDC_8h__incl.md5  TAAssessTa_8C.html  TAAssessTa_8C__incl.map  TAAssessTa_8C__incl.md5  TAAssessTa_8h.html  TAAssessTa_8h__dep__incl.map  TAAssessTa_8h_source.html  TAAssess_8C.html  TAAssess_8h.html  TAAssess_8h__dep__incl.map  TAAssess_8h__dep__incl.md5  TAAssess_8h__incl.md5  TABUAA_8C__incl.map  TABUAA_8h.html  TABUAA_8h__dep__incl.map  TABUAA_8h__dep__incl.md5  TAChDataVME_8C__incl.md5  TAChDataVME_8h__dep__incl.map  TAChDataVME_8h__incl.map  (+667 more)
etf/: CMakeLists.txt  bk.sh
etf/inc/: TAAnode.h  TAAnodeData.h  TAAnodePara.h  TAAssess.h  TAAssessPDC.h  TAAssessTa.h  TABUAA.h  TAChData.h  TAChDataVME.h  TAChPara.h  TAChannel.h  TACtrlPara.h  TADCCable.h  TADCSFE16.h  TADCSuperLayer.h  TADeployPara.h  TADetUnion.h  TADetector.h  TADetectorPara.h  TAEventProcessor.h  TAGPar.h  TAMUSIC.h  TAMUSICL.h  TAMUSICM.h  TAMWDC.h  TAMWDCArray.h  TAMWDCArray2.h  TAMWDCArray4.h  TAMWDCArrayD.h  TAMWDCArrayL.h  TAMWDCArrayM.h  TAMWDCArrayR.h  TAMWDCArrayU.h  TAMWDCTa.h  TAMWDCTaL.h  TAMWDCTaM.h  TAMagnet.h  TAMath.h  TAMath.hpp  TAMath.icc  (+50 more)
etf/src/: TAAnode.C  TAAnode.cxx  TAAnodeData.C  TAAnodeData.cxx  TAAnodePara.C  TAAnodePara.cxx  TAAssess.C  TAAssessPDC.C  TAAssessPDC.cxx  TAAssessTa.C  TAAssessTa.cxx  TABUAA.C  TABUAA.cxx  TAChData.C  TAChData.cxx  TAChDataVME.C  TAChPara.C  TAChannel.C  TAChannel.cxx  TACtrlPara.C  TACtrlPara.cxx  TADCCable.C  TADCSFE16.C  TADCSuperLayer.C  TADeployPara.C  TADeployPara.cxx  TADetUnion.C  TADetector.C  TADetectorPara.C  TAEventProcessor.C  TAEventProcessor.C~  TAEventProcessor.cxx  TAGPar.C  TAGPar.cxx  TAMUSIC.C  TAMUSICL.C  TAMUSICM.C  TAMWDC.C  TAMWDC.cxx  TAMWDCArray.C  (+98 more)
etf/src/TABUAA/: VMEAnalyze.C  VMEAnalyze.cxx  read.C
etf/src/TAEventProcessor/: define_hist.C  define_hist.cxx  define_tree.C  define_tree.cxx  fill_post.C  fill_post.C~  fill_post.cxx  fill_pre.C  fill_pre.cxx  write.C
etf/src/TAMWDCArray/: map.C  map.C~  map.cxx  map1.C  map1.cxx_  mapOriginal.C  mapOriginal.cxx_
etf/src/TAMWDCArray2/: map.C  map.cxx  map1.C  map1.cxx_  map2Original.C  map2Original.cxx_
etf/src/TAMWDCArray4/: map4.C
etf/src/TAMath/: bfgs2.C  bfgs2.cxx  bfgs4.C  bfgs4.cxx  deviaFun.C  deviaFun.cxx  five.C  four.C  four.cxx  iterFit.C  iterFit.cxx  iterFit0.C  iterFit1.C  iterFit4.C  iterFit4.cxx  iterFit4Single.cxx  iterFit8.C  iterFitWrong.C  iterFit_20180817.C  iterFit_signSwing.C  iterFit_signSwing_iter.cxx_  one.C  refinedFit.C  refinedFit.cxx  six.C  six.cxx  three.C  three.cxx  two.C  uniformMagneticSolution.C
misc/: 2q  Ar_CO2_20 %.gas  fill_post_2019_0920.C  mag.C  vdx1.C  vdx2p.C  vdxPostTa.C  vdxPreTa.C
src/: CMakeLists.txt  assess.C  assess0.C  assess0L.C  cut.C  eval.C  pid3.C  pre.C  pre.C~  pre.cxx  pre1.C  preU.C  pre_bk.cxx  shoot.C  shoot.cxx  sim.C  strcali.C  strcali_dcta.C  strcali_pdc.C  t0cali.C  t0cali_pdc.C  test.cxx  vme.C
src/gui/: MyMainFrame.C  MyMainFrame.h  MyMainFrameDict.C  MyMainFrameDict_rdict.pcm  custom.C  custom.cxx  gui  gui.C  gui.cxx  makefile
(+1778 files in other folders)
